Fix config api
